--- a/src/java/overview.html
+++ b/src/java/overview.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-   <title>XWS</title>
+   <title>ant-ivy</title>
 </head>
 <body>
-	<p>Look up project</p>
+	<p>ant+ivy java study project</p>
 </body>
 </html>
 
